--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 </head>
 <body>
 
-<div id="hai" class="head">
+<div id="hai" class="head gugu">
 </div>
 
 <img src="Images/poza_head.png" id="poza_head">
@@ -76,7 +76,7 @@
 </p>
 
 <p id="prezi">
-  Lorem ipsum dolor sit amet, consectetur adipiscing elit. In ex ligula, malesuada id condimentum ut, porta sed leo. Integer pulvinar, enim at hendrerit mollis, leo metus dignissim orci, eget viverra urna Vestibulum dignissim orncee commodo. Integer eget cursus nibh. Morbi aliquet
+  Lorem ipsum dolor sit amet, consectetur adipiscing elit. In ex ligula, malesuada id condimentum ut, porta sed leo. Integer pulvinar, enim at hendrerit mollis, leo metus dignissim orci, eget viverra urna Vestibulum dignissim orncee commodo. Ana are mere.
   <br>
   <span id="tranz">
     ce
